--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             "styles": [
               {
                 "input": "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
-              }
+              },
+              "src/styles.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -84,7 +85,8 @@
             "styles": [
               {
                 "input": "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
-              }
+              },
+              "src/styles.css"
             ],
             "scripts": [],
             "assets": [
