--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,10 @@
             "styles": [
               {
                 "input": "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+                
               },
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -86,7 +88,8 @@
               {
                 "input": "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [],
             "assets": [
