--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "devextreme-angular": "^18.2.5",
     "hammerjs": "^2.0.8",
     "jszip": "^3.1.3",
+    "ngx-toastr": "^9.1.2",
     "quill": "^1.3.6",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
