--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "devextreme-angular": "^18.2.5",
     "hammerjs": "^2.0.8",
     "jszip": "^3.1.3",
+    "ngx-daterangepicker-material": "^2.0.2",
     "ngx-toastr": "^9.1.2",
     "quill": "^1.3.6",
     "rxjs": "^6.3.3",
+    "saturn-datepicker": "^7.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
